# fox

./: Cargo.toml  README.md  history.txt
lib/lexer/: token.rs
lib/parser/: mod.rs
repl/: main.rs
src/: cmd.rs  main.rs  parser.rs
tests/: fox_test.rs
