[package]
name = "fox_rust"
version = "0.1.0"
authors = ["Brian Teague <br.teague@gmail.com>"]
edition = "2021"

[lib]
name = "fox_lib"
path = "lib/fox.rs"

[[bin]]
name = "fox_repl"
path = "repl/main.rs"

[[bin]]
name = "fox_exe"
path = "src/main.rs"

[dependencies]
nom = "^7.1.3"
clap = "~2.31.2"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"